issue on update on calculating the size

BUG:288276